--- a/css/main.css
+++ b/css/main.css
@@ -4,10 +4,14 @@
         font-family: "Open Sans";
         src: url("fonts/Open-Sans/OpenSans-Regular.ttf");
     }
-    /* @font-face {
-        font-family: FoundryExBdIta;
-        src: url("fonts/foundry-monoline/FoundryMonoline-ExBdIta.ttf");
-    } */
+    @font-face {
+        font-family: "Roboto";
+        src: url("fonts/Roboto/Roboto-Regular.ttf");
+    }
+    @font-face {
+        font-family: "RobotoBold";
+        src: url("fonts/Roboto/Roboto-Bold.ttf");
+    }
 
     .header{
         display: flex;
@@ -75,11 +79,128 @@
     .form .form-title{
         display: flex;
         padding-left: 19px;
+        margin-bottom: 19px;
     }
     .form .form-title .form-title-collumn{
         flex-direction: column;
         padding-left: 16px;
     }
+    .form .form-title .form-title-collumn p{
+        font-family: "Open Sans";
+    }
+    .form .form-title .form-title-collumn p:first-child{
+        letter-spacing: 0px;
+        line-height: 19px;
+        color: #000000;
+        font-size: 14px;
+    }
+    .form .form-title .form-title-collumn p:last-child{
+        font-family: "Open Sans";
+        color: #DF0209;
+        text-transform: uppercase;
+        font-size: 22px;
+        letter-spacing: 0px;
+    }
+    .form .form-inputs{
+        margin: 0px 20px 0px 20px;
+    }
+    .form .form-inputs input, select{
+        height: 36px;
+        margin-bottom: 5px;
+    }
+    .form .form-inputs select{
+        width: 294px;
+    }
+    .form .form-inputs input{
+        width: calc(294px - 8px);
+    }
+    .form .form-inputs button{
+        width: 294px;
+        height: 45px;
+        background-color: #1CB72A;
+        border-radius: 4px;
+        color: #FFFFFF;
+        font-size: 14px;
+        letter-spacing: 0px;
+        font-family: "RobotoBold";
+        text-transform: uppercase;
+        margin-bottom: 20px;
+    }
+    .slogan{
+        margin-top: 43px;
+        margin-bottom: 14px;
+    }
+    .slogan p{
+        font-size: 24px;
+        line-height: 32px;
+        text-align: center;
+        font-family: "Open Sans";
+        letter-spacing: 0px;
+        color: #000000;
+        text-transform: uppercase;
+        font-style: italic;
+    }
+    .banner-dois-carros{   
+        margin: 0px 20px 37px 20px;
+    }
+    .banner-dois-carros img{
+        width: 320px;
+        height: 100px;
+    }
+    .text-info{
+        margin: 0px 20px calc(30px * 2) 20px;
+    }
+    .text-info p{
+        text-align: center;
+        font-family: "Open Sans";
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 24px;
+        letter-spacing: 0px;
+        color: #000000;
+    }
+    .imagem-dentro-carro{
+        width: 100%;
+        height: 415px;
+        background-image: url('../img/retangulo11.png');
+        margin-bottom: 30px;
+    }
+    .imagem-dentro-carro p{
+        color: #FFFFFF;
+        letter-spacing: 0px;
+        font-family: "Open Sans";
+        text-align: center;
+    }
+    .imagem-dentro-carro p:first-child{
+        padding-top: 256px;
+        margin: 0px 47px 0px 47px;
+        font-size: 24px;
+        line-height: 32px;
+        font-style: italic;
+    }
+    .imagem-dentro-carro p:last-child{
+        padding-bottom: 28px;
+        margin: 0px 34px 0px 34px;
+        font-size: 16px;
+        line-height: 21px;
+    }
+    .slider{
+        margin: 0px 20px 0px 20px;
+        width: 335px;
+        height: 236px;
+        background: #FFFFFF 0% 0% no-repeat padding-box;
+        border: 1px solid #D5D5D5;
+        opacity: 1;
+    }
+    .slider-item{
+        padding: 6px;
+    }
+    .slider-item img{
+        width: 323px;
+        height: 223px;
+        object-fit: contain;
+    }
+    
 
 
 }
