--- a/css/reset.css
+++ b/css/reset.css
@@ -46,3 +46,11 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+button {
+    color: none;
+    background-color: none;
+    border-width: 0px;
+    border-style: none;
+    border-color: none;
+    border-image: none;
+}
